Jquery and Bootstap dependencies

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
+<h3>Hi Welcome to the app component</h3>
+<input type="button" name="submit" class="btn-primary" value="submit">
 <router-outlet></router-outlet>
